-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.2, 10.4
-
Component/s: Galera
-
Labels:None
In the fix for issue MDEV-21577, OPTIMIZE REPAIR and ALTER table TOI replication was modified to look if affected table has foreign key constraints and append foreign key parent table names in the write set certification key list, if any. This was needed because these DDL statements take additional MDL shared lock on the FK parent table, and this could cause MDL BF-BF conflict situation with another applier operating on the FK parent table only.
After the MDEV-21577 fix, it has turned out that also TRUNCATE TABLE acquires MDL lock on FK parent table, and TOI replication for TRUNCATE will need similar fix.
- relates to
-
MDEV-21577 Galera crash after MDL BF-BF conflict
-
- Closed
-
-
MDEV-23997 truncate is crashing mariadb galera cluster slave nodes
-
- Closed
-